Orders List for Providers

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -165,6 +165,7 @@
     },
     "providers": {
         "providers": "Providers",
+        "provider": "Provider",
         "no_cproviders": "There are no providers in this category",
         "com_name": "Trade name",
         "legal_name": "Legal name",
