--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -155,6 +155,30 @@
         "dashboard": "Dashboard",
         "register": "Register"
     },
+    "orders": {
+        "edit_order": "Edit Order",
+        "add_order": "Add Order",
+        "select_customer": "Select a customer",
+        "select_provider": "Select a provider",
+        "orders_customers": "Customer Orders",
+        "name": "Description",
+        "price": "Unit Price",
+        "units": "Units",
+        "field": "Field",
+        "sourceLanguage": "Source Language",
+        "targetLanguage": "Target Language",
+        "items": "Lines",
+        "descrip": "Description",
+        "discount": "Discount",
+        "date": "Date",
+        "total": "Total",
+        "no_orders": "There are no orders in this category",
+        "confirm_delete": "Do you want to delete this order?",
+        "all": "All",
+        "pending": "Unbilled",
+        "billed": "Billed",
+        "quantity": "Quantity"
+    },
     "phones":{
         "phoneNumber": "Number",
         "kind": "Type",
