--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -154,6 +154,30 @@
         "dashboard": "Dashboard",
         "register": "Inscription"
     },
+    "orders": {
+        "edit_order": "Modifier la commande",
+        "add_order": "Ajouter une commande",
+        "select_customer": "Choisissez un client",
+        "select_provider": "Choisissez un fournisseur",
+        "orders_customers": "Commandes clients",
+        "name": "Description",
+        "price": "Prix unitaire",
+        "units": "Unités",
+        "field": "Secteur",
+        "sourceLanguage": "Langue source",
+        "targetLanguage": "Langue cible",
+        "items": "Lignes",
+        "descrip": "Description",
+        "discount": "Remise",
+        "date": "Date",
+        "total": "Total",
+        "no_orders": "Il n’y a aucune commande dans cette catégorie",
+        "confirm_delete": "Voulez-vous supprimer cette commande ?",
+        "all": "Tous",
+        "pending": "Non facturés",
+        "billed": "Facturés",
+        "quantity": "Quantité"
+    },
     "phones":{
         "phoneNumber": "Numéro",
         "kind": "Type",
