--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -18,7 +18,8 @@
         "edit": "Edit",
         "blue": "Blue",
         "red": "Red",
-        "next": "Next"
+        "next": "Next",
+        "print": "Print"
     },
     "companies": {
         "phones": "Phones",
