--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -18,7 +18,8 @@
         "edit": "Editar",
         "blue": "Azul",
         "red": "Rojo",
-        "next": "Siguiente"
+        "next": "Siguiente",
+        "print": "Imprimir"
     },
     "companies": {
         "phones": "Teléfonos",
