--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -136,6 +136,7 @@
         "invalid_price": "La valeur du prix de base doit être un nombre",
         "invalid_qty": "La valeur de la quantité doit être un nombre",
         "no_customer_selected":"Vous devez sélectionner un client",
+        "no_provider_selected":"Vous devez sélectionner un fournisseur",
         "editing_order": "Erreur lors de la modification de la commande",
         "order_without_items": "Le total de la commande doit être > 0.",
         "document_without_Order": "Le total du document doit être > 0.",
@@ -200,6 +201,7 @@
         "all_providers": "Tous les fournisseurs",
         "com_name": "Nom commercial",
         "legal_name": "Raison sociale",
+        "name": "Nom",
         "vat_number": "Numéro de TVA",
         "email": "Email",
         "web": "Site web",
