--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -121,6 +121,9 @@
         "total_withholding": "Total retención",
         "total_to_pay": "Total a pagar",
         "invoices_customers": "Facturas Clientes",
+        "invoices_providers": "Facturas Proveedores",
+        "quotes": "Presupuestos",
+        "pos": "Órdenes de pedido",
         "all_invoices": "Todas",
         "all_quotes": "Todos",
         "pending": "No pagadas",
@@ -134,7 +137,10 @@
         "note_payment": "Nota Pago",
         "note_comment": "Comentario",
         "add_invoice": "Añadir Factura",
+        "add_quote": "Añadir Presupuesto",
+        "add_po": "Añadir Orden de Pedido",
         "select_customer": "Elige un cliente",
+        "select_provider": "Elige un proveedor",
         "last_number": "Última factura",
         "new_change_rate": "Nuevo cambio",
         "currency1": "Divisa 1",
