--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -107,6 +107,54 @@
         "demo_banner2": "Your data will be lost when you create your company.",
         "demo_banner_link": "Register your company."
     },
+    "documents": {
+        "confirm_delete": "Do you want to delete this document?",
+        "cant_modify_if_paid": "An invoice that has already been paid cannot be edited.",
+        "edit_invoice": "Edit Invoice",
+        "select_change_rate": "Select an exchange rate",
+        "bank_account": "Bank account",
+        "total_net": "Net total",
+        "total_gross": "Invoice total",
+        "vat_rate": "VAT",
+        "withholding": "Withholding",
+        "total_vat": "Total VAT",
+        "total_withholding": "Total withholding",
+        "total_to_pay": "Total to pay",
+        "invoices_customers": "Customer Invoices",
+        "invoices_providers": "Supplier Invoices",
+        "quotes": "Quotes",
+        "pos": "Purchase Orders",
+        "all_invoices": "All",
+        "all_quotes": "All",
+        "pending": "Unpaid",
+        "paid": "Paid",
+        "is_paid": "Paid",
+        "no_documents": "There are no documents in this category",
+        "number": "Number",
+        "date": "Date",
+        "total": "Total",
+        "note_delivery": "Delivery note",
+        "note_payment": "Payment note",
+        "note_comment": "Comment",
+        "add_invoice": "Add Invoice",
+        "add_quote": "Add Quote",
+        "add_po": "Add Purchase Order",
+        "select_customer": "Select a customer",
+        "select_provider": "Select a supplier",
+        "last_number": "Last invoice",
+        "new_change_rate": "New exchange rate",
+        "currency1": "Currency 1",
+        "currency2": "Currency 2",
+        "rate": "Rate",
+        "invoice": "Invoice",
+        "bank_accounts": "Bank details",
+        "pay_method": "Payment method",
+        "status": "Status",
+        "accepted": "Accepted",
+        "rejected": "Rejected",
+        "pending_quote": "Pending"
+    },
+
     "error": {
         "all_fields_required": "All fields are required",
         "incorrect_credentials": "Incorrect username and/or password",
