--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -107,6 +107,53 @@
         "demo_banner2": "Vos données seront perdues lorsque vous créerez votre entreprise.",
         "demo_banner_link": "Enregistrez votre entreprise."
     },
+    "documents": {
+        "confirm_delete": "Voulez-vous supprimer ce document ?",
+        "cant_modify_if_paid": "Une facture déjà payée ne peut pas être modifiée.",
+        "edit_invoice": "Modifier la facture",
+        "select_change_rate": "Sélectionnez un taux de change",
+        "bank_account": "Compte bancaire",
+        "total_net": "Total net",
+        "total_gross": "Total facture",
+        "vat_rate": "TVA",
+        "withholding": "Retenue",
+        "total_vat": "Total TVA",
+        "total_withholding": "Total retenue",
+        "total_to_pay": "Total à payer",
+        "invoices_customers": "Factures clients",
+        "invoices_providers": "Factures fournisseurs",
+        "quotes": "Devis",
+        "pos": "Bons de commande",
+        "all_invoices": "Toutes",
+        "all_quotes": "Tous",
+        "pending": "Non payées",
+        "paid": "Payées",
+        "is_paid": "Payée",
+        "no_documents": "Il n’y a aucun document dans cette catégorie",
+        "number": "Numéro",
+        "date": "Date",
+        "total": "Total",
+        "note_delivery": "Bon de livraison",
+        "note_payment": "Note de paiement",
+        "note_comment": "Commentaire",
+        "add_invoice": "Ajouter une facture",
+        "add_quote": "Ajouter un devis",
+        "add_po": "Ajouter un bon de commande",
+        "select_customer": "Sélectionnez un client",
+        "select_provider": "Sélectionnez un fournisseur",
+        "last_number": "Dernière facture",
+        "new_change_rate": "Nouveau taux de change",
+        "currency1": "Devise 1",
+        "currency2": "Devise 2",
+        "rate": "Taux",
+        "invoice": "Facture",
+        "bank_accounts": "Coordonnées bancaires",
+        "pay_method": "Mode de paiement",
+        "status": "Statut",
+        "accepted": "Accepté",
+        "rejected": "Rejeté",
+        "pending_quote": "En attente"
+    },
     "error": {
         "all_fields_required": "Tous les champs sont obligatoires",
         "iban_required": "Le numéro IBAN est obligatoire",
