--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -293,6 +293,29 @@
         "state": "State/Province",
         "country": "Country"
     },
+        "reports": {
+        "report_incomes": "Income Reports",
+        "report_incomes_graph": "Income Graph",
+        "report_outcomes": "Expense Reports",
+        "loading": "Loading...",
+        "date_from": "From",
+        "date_to": "To",
+        "month": "Month",
+        "quarter": "Quarter",
+        "year": "Year",
+        "total": "Total",
+        "customer": "Customer",
+        "provider": "Supplier",
+        "total_net": "Net Total",
+        "total_vat": "Total VAT",
+        "total_withholding": "Total Withholding",
+        "no_invoices": "No invoices in this period",
+        "no_data": "No data to display",
+        "report_pending_cashing": "Pending Collections Report",
+        "report_pending_payment": "Pending Payments Report",
+        "paid": "Paid",
+        "average": "Average"
+    },
     "schemes": {
         "add_scheme": "Add Scheme",
         "select_scheme": "Select Scheme",
