--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -291,6 +291,29 @@
         "state": "Province",
         "country": "Pays"
     },
+    "reports": {
+        "report_incomes": "Rapports de revenus",
+        "report_incomes_graph": "Graphique des revenus",
+        "report_outcomes": "Rapports de dépenses",
+        "loading": "Chargement...",
+        "date_from": "De",
+        "date_to": "À",
+        "month": "Mois",
+        "quarter": "Trimestre",
+        "year": "Année",
+        "total": "Total",
+        "customer": "Client",
+        "provider": "Fournisseur",
+        "total_net": "Total net",
+        "total_vat": "Total TVA",
+        "total_withholding": "Total retenue",
+        "no_invoices": "Aucune facture pour cette période",
+        "no_data": "Aucune donnée à afficher",
+        "report_pending_cashing": "Rapport des encaissements en attente",
+        "report_pending_payment": "Rapport des paiements en attente",
+        "paid": "Payée",
+        "average": "Moyenne"
+    },
     "schemes": {
         "add_scheme": "Ajouter un schéma",
         "select_scheme": "Choisissez un schéma",
