--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -321,6 +321,8 @@
     },
     "schemes": {
         "add_scheme": "Add Scheme",
+        "edit_scheme": "Edit Scheme",
+        "confirm_delete": "Do you want to delete this scheme?",
         "select_scheme": "Select Scheme",
         "name": "Name",
         "price": "Price",
